[gd_scene load_steps=20 format=3 uid="uid://bju4jxwr7a0pg"]

[ext_resource type="Script" path="res://level1/scripts/main.gd" id="1_d36gk"]
[ext_resource type="PackedScene" uid="uid://bpkphu8qj137m" path="res://level1/scenes/bg.tscn" id="1_qy3kl"]
[ext_resource type="PackedScene" uid="uid://b5pwnh1tmyrnl" path="res://level1/scenes/ground.tscn" id="2_qu4oq"]
[ext_resource type="PackedScene" uid="uid://bhtein0chknfn" path="res://level1/scenes/dino.tscn" id="3_l41lx"]
[ext_resource type="PackedScene" uid="uid://lyf4a3sklk1o" path="res://level1/scenes/hud.tscn" id="5_cgpie"]
[ext_resource type="PackedScene" uid="uid://lotwuige1aee" path="res://level1/scenes/game_over.tscn" id="6_6n2u1"]
[ext_resource type="PackedScene" uid="uid://bn16pnjwue1je" path="res://scenes/alien_ufo.tscn" id="7_i8imr"]
[ext_resource type="PackedScene" uid="uid://dnv0wy0kcoar0" path="res://scenes/dialog.tscn" id="8_g5vde"]
[ext_resource type="Texture2D" uid="uid://cgfu8maw5s1rg" path="res://assets/sprites/mini_ufo.png" id="9_plo03"]
[ext_resource type="Texture2D" uid="uid://dq2obeht71po" path="res://assets/sprites/MC/cow_face.png.png" id="9_ujxiy"]
[ext_resource type="AudioStream" uid="uid://ccl38fhknsogp" path="res://assets/sound/JENNA MODE/Tense SARAH Music.wav" id="11_ph731"]
[ext_resource type="PackedScene" uid="uid://cn7mmujjy6xnq" path="res://scenes/deathscreen.tscn" id="12_sxjjd"]
[ext_resource type="PackedScene" uid="uid://qot0dbdb6w34" path="res://level2/bush.tscn" id="13_p20h5"]
[ext_resource type="PackedScene" uid="uid://bpymec431vssf" path="res://minimap.tscn" id="14_t2jfc"]

[sub_resource type="Animation" id="Animation_jpa4j"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Dino:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(450, 285)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Dialog:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("UFO:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(143, -167)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("HUD:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_8uelr"]
resource_name = "intro"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Dino:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 285), Vector2(450, 285)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.966667),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"animation_over"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Dialog:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("HUD:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_8ga2v"]
resource_name = "intro2"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UFO:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-600, -167), Vector2(143, -167)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("UFO")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"values": []
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HUD:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1.23333),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_a46bf"]
resource_name = "introtext"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Dialog:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Dialog")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [[["I have to run before it catches me!!", "You_Sad", "You", "", ""]]],
"method": &"change_dialog"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ijxf2"]
_data = {
"RESET": SubResource("Animation_jpa4j"),
"intro": SubResource("Animation_8uelr"),
"intro2": SubResource("Animation_8ga2v"),
"introtext": SubResource("Animation_a46bf")
}

[node name="Main" type="Node"]
script = ExtResource("1_d36gk")

[node name="Bg" parent="." instance=ExtResource("1_qy3kl")]
offset = Vector2(0, -400)
transform = Transform2D(1, 0, 0, 1, 0, -400)

[node name="Dino" parent="." instance=ExtResource("3_l41lx")]
z_index = 0
position = Vector2(450, 285)

[node name="UFO" parent="." instance=ExtResource("7_i8imr")]
position = Vector2(143, -167)
scale = Vector2(2, 2)

[node name="bush" parent="." instance=ExtResource("13_p20h5")]

[node name="Ground" parent="." instance=ExtResource("2_qu4oq")]
position = Vector2(0, -200)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(576, 124)

[node name="HUD" parent="." instance=ExtResource("5_cgpie")]
visible = false

[node name="GameOver" parent="." instance=ExtResource("6_6n2u1")]
process_mode = 2
offset = Vector2(0, 120)
transform = Transform2D(1, 0, 0, 1, 0, 120)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ijxf2")
}

[node name="Dialog" parent="." instance=ExtResource("8_g5vde")]
visible = false
position = Vector2(60, -405)

[node name="ProgressBar" type="ProgressBar" parent="."]
modulate = Color(0, 1, 1, 1)
offset_left = 107.0
offset_top = -354.0
offset_right = 1013.0
offset_bottom = -327.0
max_value = 3000.0

[node name="MiniUFO" type="Sprite2D" parent="."]
position = Vector2(111, -338.375)
scale = Vector2(2.72619, 2.725)
texture = ExtResource("9_plo03")

[node name="CowFace" type="Sprite2D" parent="."]
position = Vector2(111, -342)
scale = Vector2(2.875, 3.1)
texture = ExtResource("9_ujxiy")

[node name="JENNATenseMusic" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("11_ph731")
volume_db = 5.0
bus = &"JENNA MODE"

[node name="Deathscreen" parent="." instance=ExtResource("12_sxjjd")]
position = Vector2(62, -388)

[node name="minimap" parent="." instance=ExtResource("14_t2jfc")]
